--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: navigation_drawer_challenge
-description: Navigation Drawer Challenge
+description: Navigation Drawer UI
 
 publish_to: "none"
 
